--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,14 @@
   "image": "mcr.microsoft.com/devcontainers/rust:latest",
   "features": {
     "ghcr.io/devcontainers/features/sshd:1": {}
+  },
+  "remoteEnv": {
+    "PATH": "/usr/local/nvim/bin:${containerEnv:PATH}",
+    "EDITOR": "nvim",
+    "VISUAL": "nvim"
+  },
+  "postCreateCommand": {
+    "neovim": "sudo mkdir /usr/local/nvim && curl -L https://github.com/neovim/neovim/releases/latest/download/nvim-linux-x86_64.tar.gz | sudo tar -zx -C /usr/local/nvim --strip-components=1",
+    "kickstart.nvim": "git clone https://github.com/sleb/kickstart.nvim.git $HOME/.config/nvim"
   }
 }
