--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 directories = "6.0"
 ratatui = "0.29"
 serde = { version = "1.0", features = ["derive"] }
