--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "wimm"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "WIMM (Where is my mind) - A terminal-based task management application"
+repository = "https://github.com/your-username/wimm"
+keywords = ["cli", "task-management", "productivity", "terminal", "tui"]
+categories = ["command-line-utilities"]
+authors = ["Your Name <your.email@example.com>"]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
@@ -12,3 +18,6 @@ serde_json = "1.0"
 sled = "0.34"
 thiserror = "2.0"
 uuid = { version = "1.17.0", features = ["v4"] }
+
+[dev-dependencies]
+tempfile = "3.0"
