feat: migrate from Make to Just command runner
- Replace Makefile with justfile for better syntax and UX
- Update GitHub Actions CI/CD to use Just
- Update devcontainer and pre-commit hooks to use Just
- Update README with Just installation and usage instructions
- Remove Makefile and migration scripts

Breaking change: Users need to install Just (brew install just or cargo install just)
Benefits: Better error messages, no tab sensitivity, built-in help, cross-platform

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,7 @@
   },
   "postCreateCommand": {
     "neovim": "sudo mkdir /usr/local/nvim && curl -L https://github.com/neovim/neovim/releases/latest/download/nvim-linux-x86_64.tar.gz | sudo tar -zx -C /usr/local/nvim --strip-components=1",
-    "kickstart.nvim": "git clone https://github.com/sleb/kickstart.nvim.git $HOME/.config/nvim"
+    "kickstart.nvim": "git clone https://github.com/sleb/kickstart.nvim.git $HOME/.config/nvim",
+    "just": "cargo install just"
   }
 }
