--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,20 +34,20 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Install cargo-tarpaulin
-        run: cargo install cargo-tarpaulin
+      - name: Install Just
+        run: cargo install just
+
+      - name: Install development tools
+        run: just install-tools
 
       - name: Build
-        run: cargo build --verbose
+        run: just build
 
       - name: Run tests
-        run: cargo test --verbose
+        run: just test
 
       - name: Run coverage
-        run: |
-          cargo tarpaulin --verbose --all-features --workspace --timeout 120 \
-            --exclude-files "src/main.rs" \
-            --out Xml --out Html --out Json
+        run: just coverage
 
       - name: Check coverage threshold
         run: |
@@ -149,11 +149,14 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-lint-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Install Just
+        run: cargo install just
+
       - name: Run rustfmt
-        run: cargo fmt --all -- --check
+        run: just fmt-check
 
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: just clippy
 
   security:
     name: Security Audit
@@ -174,11 +177,11 @@ jobs:
             ~/.cargo/git
           key: ${{ runner.os }}-cargo-audit-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Install cargo-audit
-        run: cargo install cargo-audit
+      - name: Install Just
+        run: cargo install just
 
       - name: Run security audit
-        run: cargo audit
+        run: just audit
 
   msrv:
     name: Minimum Supported Rust Version
@@ -200,5 +203,8 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-msrv-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Install Just
+        run: cargo install just
+
       - name: Check MSRV
-        run: cargo check --all-targets --all-features
+        run: just msrv
