--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,14 @@ authors = ["Your Name <your.email@example.com>"]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+clap = { version = "4.4", features = ["derive"] }
 directories = "6.0"
 ratatui = "0.29"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sled = "0.34"
 thiserror = "1.0"
+toml = "0.8"
 uuid = { version = "1.17.0", features = ["v4"] }
 
 [dev-dependencies]
