--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -191,6 +191,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install Rust stable (for Just)
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install Just
+        run: cargo install just
+
       - name: Install Rust 1.74 (MSRV)
         uses: dtolnay/rust-toolchain@1.74
 
@@ -202,9 +208,6 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-msrv-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Install Just
-        run: cargo install just
 
       - name: Check MSRV
         run: just msrv
